dnl Process this file with autoconf to produce a configure script.

AC_INIT(gswat, 0.0.0)
AC_CONFIG_SRCDIR(src/main.c)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([gnu])

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_PROG_LIBTOOL
LIBTOOL="$LIBTOOL --preserve-dup-deps"

AC_ARG_ENABLE(debug,
  AC_HELP_STRING([--enable-debug],
    [enable debuging messages]),
  [
   if test $enableval = yes; then 

     AC_DEFINE(_DEBUG, 1, "define to enable debuging")

     dnl (This is for removing the default -O2 not adding -g)
     CFLAGS="-g -O0"
     EXTRA_CFLAGS="-Wall -Werror"
     SILENT="#"
   else
    if test -z $CFLAGS; then
     CFLAGS="-g -O2"
    fi
     SILENT=".SILENT"
   fi
  ],
  [
   if test -z $CFLAGS; then
        CFLAGS="-g -O2"
   fi
   SILENT=".SILENT"
  ])


AC_ARG_ENABLE(werror,
  AC_HELP_STRING([--enable-werror],
    [Use -Werror option for compilation]),
  [
      if test $enableval = yes; then 
         EXTRA_CFLAGS="-Wall -Werror"
      else
         EXTRA_CFLAGS="-Wall"
      fi
  ], 
  [
   if test -z $EXTRA_CFLAGS; then
      EXTRA_CFLAGS="-Wall"
   fi
  ])

AC_ARG_ENABLE(uninstalled-build,
              AC_HELP_STRING([--enable-uninstalled-build],
			     [Search for files in build directory as well]),
	      enable_uninstalled=yes,)
if test x"$enable_uninstalled" = xyes; then
	AC_DEFINE_UNQUOTED(SHARE_UNINSTALLED_DIR,"`pwd`/data",[path to source data dir])
	AC_DEFINE_UNQUOTED(METADATA_UNINSTALLED_DIR,"`pwd`/metadata",[path to metadata build dir])
fi


dnl AC_PROG_INSTALL

dnl Checks for programs.

dnl Checks for libraries.
PKG_CHECK_MODULES(DEPS, [
		  gtksourceview-1.0 >= 1.2.0
		  libgnomeui-2.0
		  libgnomeprintui-2.2
		  gtk+-2.0 >= 2.2 
		  glib-2.0 >= 2.2 
		  libglade-2.0 >= 2.0 
		  gthread-2.0
])

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h signal.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(putenv strdup)


AC_SUBST(EXTRA_CFLAGS)
AC_SUBST(EXTRA_CPPFLAGS)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

AC_OUTPUT(
Makefile 
src/Makefile
)

