dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(gswat, 0.0.0)
AC_CONFIG_SRCDIR(src/main.c)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([gnu])

AM_MAINTAINER_MODE


dnl make sure we keep ACLOCAL_FLAGS around for maintainer builds to work
dnl AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS -I m4")


dnl ================================================================
dnl Handle extra configure options
dnl ================================================================

AC_ARG_ENABLE(debug,
  AC_HELP_STRING([--enable-debug],
    [enable debuging messages]),
  [
   if test $enableval = yes; then 

     AC_DEFINE(_DEBUG, 1, "define to enable debuging")

     dnl (This is for removing the default -O2 not adding -g)
     CFLAGS="-g -O0"
     EXTRA_CFLAGS="-Wall -Werror"
     SILENT="#"
   else
    if test -z $CFLAGS; then
     CFLAGS="-g -O2"
    fi
     SILENT=".SILENT"
   fi
  ],
  [
   if test -z $CFLAGS; then
        CFLAGS="-g -O2"
   fi
   SILENT=".SILENT"
  ])


AC_ARG_ENABLE(werror,
  AC_HELP_STRING([--enable-werror],
    [Use -Werror option for compilation]),
  [
      if test $enableval = yes; then 
         EXTRA_CFLAGS="-Wall -Werror"
      else
         EXTRA_CFLAGS="-Wall"
      fi
  ], 
  [
   if test -z $EXTRA_CFLAGS; then
      EXTRA_CFLAGS="-Wall"
   fi
  ])

AC_ARG_ENABLE(uninstalled-build,
              AC_HELP_STRING([--enable-uninstalled-build],
			     [Search for files in build directory as well]),
	      enable_uninstalled=yes,)
if test x"$enable_uninstalled" = xyes; then
	AC_DEFINE_UNQUOTED(
        SHARE_UNINSTALLED_DIR,"`pwd`/data",[path to source data dir])
	AC_DEFINE_UNQUOTED(
        METADATA_UNINSTALLED_DIR,"`pwd`/metadata",[path to metadata build dir])
fi


dnl ================================================================
dnl Compiler stuff.
dnl ================================================================
AC_PROG_CC
AC_ISC_POSIX
AC_C_CONST


dnl ================================================================
dnl Libtool stuff.
dnl ================================================================
AC_PROG_LIBTOOL
LIBTOOL="$LIBTOOL --preserve-dup-deps"


dnl ================================================================
dnl I18n stuff.
dnl ================================================================
AC_PROG_INTLTOOL([0.23])
GETTEXT_PACKAGE=gedit
AC_SUBST(GETTEXT_PACKAGE)
AC_SUBST([CONFIG_STATUS_DEPENDENCIES],['$(top_srcdir)/po/LINGUAS'])
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
ALL_LINGUAS="`cat "$srcdir/po/LINGUAS" | grep -v '^#'`"
gswatlocaledir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(gswatlocaledir)
AM_GLIB_GNU_GETTEXT


dnl ================================================================
dnl Documentation stuff.
dnl ================================================================
GTK_DOC_CHECK(1.4)
GNOME_DOC_INIT


dnl ================================================================
dnl Check for dependency packages.
dnl ================================================================
PKG_CHECK_MODULES(DEPS, [
		  gtksourceview-1.0 >= 1.2.0
		  libgnomeui-2.0
		  libgnomeprintui-2.2
		  gtk+-2.0 >= 2.2 
		  glib-2.0 >= 2.2 
		  libglade-2.0 >= 2.0 
		  gthread-2.0
])


dnl ================================================================
dnl Misc program dependencies.
dnl ================================================================
AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
AC_PROG_INSTALL


dnl ================================================================
dnl Checks for header files.
dnl ================================================================
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h signal.h)


dnl ================================================================
dnl Checks for library functions.
dnl ================================================================
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(putenv strdup)


dnl ================================================================
dnl What needs to be substituted in other files
dnl ================================================================
AC_SUBST(EXTRA_CFLAGS)
AC_SUBST(EXTRA_CPPFLAGS)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)


dnl ================================================================
dnl Dah Da!
dnl ================================================================
AC_OUTPUT(
Makefile 
src/Makefile
po/Makefile.in
)

